BUG - svg.logo-icon not loading on Home page
Issue - svg.nav-logo at Header has display none and it is affecting same svg elsewhere, working on fix

--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -125,7 +125,7 @@
   }
 }
 
-.logo {
+.nav-logo {
   display: none;
   padding: 4px;
   z-index: 99;
@@ -174,7 +174,7 @@
   }
 }
 
-.scroll-logo{
+.scroll-logo {
   transform: translateY(-70px);
   background: transparent;
   svg { background-color: inherit;}
