--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -27,20 +27,28 @@
 }
 
 .logo-icon {
-  border: 1px solid red;
+  // border: 1px solid red;
   width: 100%;
   display: flex;
   justify-content: center;
   // max-height: 100px;
   margin-top: 30px;
   svg {
-    width: 200px;
-    height: 200px;
-    border: 1px solid red;
+    @include size(200px, 200px);
   }
-}
-.logo-cultiva-icon {
+  path {
+    fill: url(#a) $green;
+    &.logo-cultiva {
+      fill: $black;
+    }
 
+
+    @include min800 {
+      &:not(.logo-cultiva-icon){
+        display: none;
+      }
+    }
+  }
 }
 
 .intro {
