--- a/css/style.scss
+++ b/css/style.scss
@@ -65,6 +65,11 @@ p {
   @include position;
 }
 
+.hidden {
+  @include size(0,0);
+  overflow: hidden;
+}
+
 //modules
 @import 'modules/header';
 @import 'modules/home';
