--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,12 @@ p {
   margin-top: 30px;
 }
 
+@media only screen and (min-width: 800px) {
+  .logo-icon {
+    max-height: 150px;
+  }
+}
+
 .logo-icon svg {
   width: 200px;
   height: 200px;
