--- a/css/modules/_contact.scss
+++ b/css/modules/_contact.scss
@@ -21,7 +21,12 @@
     flex-direction: column;
 
     &-container {
-      overflow-x: scroll;
+      overflow: scroll;
+      -ms-overflow-style: none;  // IE 10+
+      scrollbar-width: none;  // Firefox
+      &::-webkit-scrollbar {
+        display: none;  // Safari and Chrome
+      }
     }
   }
 
@@ -92,6 +97,8 @@
   }
 
   button {
+    height: 50px;
+    min-height: 50px;
     background-color: darken($green, 5)!important;
     width: 100%!important;
   }
