--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   line-height: 1.5rem;
   margin-bottom: 50pt;
   background-color: white;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 100px);
@@ -51,14 +52,6 @@ p {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.4);
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.avoid-scroll {
   position: fixed;
   top: 0;
   right: 0;
@@ -683,7 +676,13 @@ p {
 }
 
 .slider-contact-container {
-  overflow-x: scroll;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.slider-contact-container::-webkit-scrollbar {
+  display: none;
 }
 
 .slider-address {
@@ -767,6 +766,8 @@ p {
 }
 
 .slide button {
+  height: 50px;
+  min-height: 50px;
   background-color: darkolivegreen !important;
   width: 100% !important;
 }
