--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,7 @@ body {
   line-height: 1.5rem;
   margin-bottom   : 50pt;
   background-color: $white;
-  // overflow-y: hidden;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 100px);
@@ -59,11 +59,11 @@ p {
   position: fixed;
   @include position;
 }
-//TODO: check if this works across different devices
-.avoid-scroll{
-  position: fixed;
-  @include position;
-}
+// //TODO: check if this works across different devices
+// .avoid-scroll{
+//   position: fixed;
+//   @include position;
+// }
 
 .hidden {
   @include size(0,0);
