--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -29,6 +29,7 @@
   }
 }
 
+/* Language Selector */
 .lang {
   position: fixed;
   background-color: $green40;
@@ -81,6 +82,7 @@
   }
 }
 
+/* Navigation */
 .nav {
   height : 100%;
   display: flex;
@@ -127,7 +129,7 @@
 
 .nav-logo {
   @extend .hidden;
-  
+
   svg {
     border-radius: 50%;
     background-color: $white;
@@ -189,8 +191,4 @@
   &::after {
     opacity: 0;
   }
-}
-
-.on-page {
-  color: $black;
 }
