--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   font: 1.5rem 'entypo', sans-serif;
 }
 
+/* Resets */
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +16,7 @@
   font-display: swap;
 }
 
+/* General Styling */
 body {
   width: 80vw;
   margin: auto;
@@ -65,6 +67,7 @@ p {
   overflow: hidden;
 }
 
+/* Header */
 .header-nav {
   left: 0;
   bottom: 0;
@@ -104,6 +107,7 @@ p {
   }
 }
 
+/* Language Selector */
 .lang {
   position: fixed;
   background-color: #c6d9a8;
@@ -171,6 +175,7 @@ p {
   display: none;
 }
 
+/* Navigation */
 .nav {
   height: 100%;
   display: flex;
@@ -309,10 +314,7 @@ p {
   opacity: 0;
 }
 
-.on-page {
-  color: #0f1308;
-}
-
+/* Home Page */
 .hero {
   height: 500px;
   display: flex;
@@ -400,6 +402,7 @@ p {
   margin-top: 1.5rem;
 }
 
+/* Product Main Page */
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -488,6 +491,7 @@ p {
   color: white;
 }
 
+/* Product Item Pages */
 .product-page {
   display: flex;
   position: relative;
@@ -568,6 +572,75 @@ p {
   display: inherit;
 }
 
+/* Product description popup */
+.popup-cover {
+  position: fixed;
+  top: 0;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  background-color: rgba(90, 90, 90, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (min-width: 800px) {
+  .popup-cover {
+    bottom: 0;
+  }
+}
+
+.popup-container {
+  margin: 120px 30px;
+  background-color: white;
+  padding: 30px;
+  border-radius: 5px;
+  color: #2b3618;
+  max-width: 400px;
+}
+
+.popup-container button {
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 0;
+}
+
+.popup-container h3:not(:first-child) {
+  margin-top: 30px;
+}
+
+.popup-container p {
+  margin-top: 5px;
+  color: #637d37;
+  font-weight: bold;
+}
+
+.popup-title {
+  color: #637d37;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.popup-title::before, .popup-title::after {
+  content: '';
+  background-color: #c6d9a8;
+  height: 1px;
+  flex: 1;
+}
+
+.popup-title::before {
+  margin-right: 15px;
+}
+
+.popup-title::after {
+  margin-left: 15px;
+}
+
+/* Images Page */
 .images-page {
   display: flex;
   flex-direction: column;
@@ -652,6 +725,7 @@ p {
   object-fit: cover;
 }
 
+/* Slider */
 .slider-contact {
   width: 100%;
   height: auto;
@@ -787,6 +861,7 @@ p {
   color: #0f1308;
 }
 
+/* Contact Page */
 .contact-form {
   padding: 60px 0;
   display: flex;
@@ -833,6 +908,7 @@ button:hover {
   background-color: darkolivegreen;
 }
 
+/* Google Map */
 #map {
   height: 500px;
   overflow: hidden;
@@ -842,6 +918,7 @@ button:hover {
   background-color: #dadada;
 }
 
+/* Footer Element */
 footer {
   display: none;
 }
@@ -880,7 +957,7 @@ footer a:hover {
   color: #637d37;
 }
 
-.contact {
+footer .contact {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -890,11 +967,11 @@ footer a:hover {
   max-width: 980px;
 }
 
-.icons {
+footer .icons {
   margin-top: 15px;
 }
 
-.social {
+footer .social {
   margin-right: 10px;
   transition-property: color;
   transition-duration: 0.6s;
@@ -903,73 +980,8 @@ footer a:hover {
   transition-duration: 200ms;
 }
 
-.social:hover, .social:active {
+footer .social:hover, footer .social:active {
   color: #637d37;
 }
 
-.popup-cover {
-  position: fixed;
-  top: 0;
-  bottom: 80px;
-  left: 0;
-  right: 0;
-  background-color: rgba(90, 90, 90, 0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media only screen and (min-width: 800px) {
-  .popup-cover {
-    bottom: 0;
-  }
-}
-
-.popup-container {
-  margin: 120px 30px;
-  background-color: white;
-  padding: 30px;
-  border-radius: 5px;
-  color: #2b3618;
-  max-width: 400px;
-}
-
-.popup-container button {
-  width: 100%;
-  margin-top: 30px;
-  margin-bottom: 0;
-}
-
-.popup-container h3:not(:first-child) {
-  margin-top: 30px;
-}
-
-.popup-container p {
-  margin-top: 5px;
-  color: #637d37;
-  font-weight: bold;
-}
-
-.popup-title {
-  color: #637d37;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-}
-
-.popup-title::before, .popup-title::after {
-  content: '';
-  background-color: #c6d9a8;
-  height: 1px;
-  flex: 1;
-}
-
-.popup-title::before {
-  margin-right: 15px;
-}
-
-.popup-title::after {
-  margin-left: 15px;
-}
+/* END */
